tests/reference/asr-matrix_matmul_05-c57a23d.stderr
semantic error: `matmul` accepts arrays of rank 1 or 2 only, provided an array with rank, 4
 --> tests/errors/matrix_matmul_05.f90:5:24
  |
5 |     print *, matmul(a, b)
  |                        ^ 
